--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,7 @@
       "purpose": "any maskable"
     }
   ],
-  "start_url": "/register",
+  "start_url": "/",
   "background_color": "#fc637f",
   "display": "Fullscreen",
   "scope": "/",
